feat: implementa versão final do projeto